JNAerator: started experimental code for node.js native bindings generation (new target runtime!). Introduced distinction of explicit vs. implicit macros to support generation of GYP files.